fixed layout issues, all animations and links completed

--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ body {
 }
 
 .container-all {
-  min-height: 1428px;
+  height: 1428px;
 }
 
 .nav_arrow {
@@ -484,10 +484,10 @@ body {
   padding-bottom: 60px;
 }
 
-.btn-sec2 {
+.btn-restaurant {
   padding-bottom: 35px;
 }
-.btn-sec2--grad {
+.btn-restaurant--grad {
   background-image: radial-gradient(closest-side at 17% 26%, #ef74da 82%, #9356dc 291%);
   margin: auto;
   padding: 15px 0px;
@@ -500,12 +500,47 @@ body {
   display: block;
   border: none;
 }
-.btn-sec2--grad:hover {
+.btn-restaurant--grad:hover {
   cursor: pointer;
   background-image: radial-gradient(closest-side at 17% 26%, #f182de 82%, #9b63df 291%);
   text-decoration: none;
   font-weight: 700;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+footer {
+  background-color: #3b3b3b;
+  padding: 5px 10px 20px 10px;
+}
+footer .text-link-restaurant {
+  color: white;
+  text-decoration: none;
+}
+footer .foot-title-restaurant {
+  font-family: "Shrikhand", sans-serif;
+  padding-left: 0;
+  color: white;
+  font-size: 15px;
+}
+footer .foot-all-restaurant {
+  text-decoration: none;
+  color: white;
+  padding-left: 0;
+}
+footer .foot-list-restaurant {
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 14px;
+  list-style-type: none;
+  color: white;
+  margin: 6px 0px 0px 0px;
+}
+footer .foot-list-restaurant .foot-image-restaurant {
+  text-decoration: none;
+  font-size: 10px;
+  width: 10px;
+  padding-right: 10px;
 }
 
 @media (min-width: 635px) {
@@ -531,45 +566,49 @@ body {
   .whole_block-section .menu_blocks {
     min-width: 315px;
   }
+  footer {
+    background-color: #3b3b3b;
+    padding: 5px 10px 20px 10px;
+  }
+  footer .text-link-restaurant {
+    color: white;
+    text-decoration: none;
+  }
+  footer .foot-title-restaurant {
+    font-family: "Shrikhand", sans-serif;
+    padding-left: 0;
+    color: white;
+    font-size: 15px;
+    padding-right: 60px;
+  }
+  footer .foot-all-restaurant {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 100px;
+    text-decoration: none;
+    color: white;
+    padding-left: 0;
+  }
+  footer .foot-list-restaurant {
+    font-family: "Roboto", sans-serif;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    list-style-type: none;
+    color: white;
+    margin: 6px 0px 0px 0px;
+  }
+  footer .foot-list-restaurant .foot-image-restaurant {
+    text-decoration: none;
+    font-size: 10px;
+    width: 10px;
+    padding-right: 10px;
+  }
 }
-footer {
-  background-color: #3b3b3b;
-  padding: 5px 10px 20px 10px;
-}
-footer .text-link {
-  color: white;
-  text-decoration: none;
-}
-footer .foot-title {
-  font-family: "Shrikhand", sans-serif;
-  padding-left: 0;
-  color: white;
-  font-size: 15px;
-}
-footer .foot-all {
-  text-decoration: none;
-  color: white;
-  padding-left: 0;
-}
-footer .foot-list {
-  font-family: "Roboto", sans-serif;
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 14px;
-  list-style-type: none;
-  color: white;
-  margin: 6px 0px 0px 0px;
-}
-footer .foot-list .foot-image {
-  text-decoration: none;
-  font-size: 10px;
-  width: 10px;
-  padding-right: 10px;
-}
-
 @media (min-width: 992px) {
   .container-all {
-    height: 900px;
+    height: 1042px;
   }
   .hero_image .hero_image-one {
     object-fit: cover;
